# mdify

./: .gitignore  MANIFEST.in  PUBLISHING.md  PYPI-READY.md  QUICKSTART-PYPI.md  README.md  REFACTOR.md  TASKFILE.md  Taskfile.yml  build.sh  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: container.yml
mdfy/: __init__.py  __main__.py
mdify/: __init__.py  __main__.py  cli.py  container.py  docling_client.py
runtime/: Dockerfile  convert.py
tests/: test_cli.py  test_container.py  test_docling_client.py
