[project]
name = "mdify"
version = "0.1.0"
description = "Convert documents to Markdown using Docling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tiroq"}
]
keywords = ["markdown", "conversion", "pdf", "docling", "cli", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "docling>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tiroq/mdify"
Repository = "https://github.com/tiroq/mdify"
Issues = "https://github.com/tiroq/mdify/issues"

[project.scripts]
mdify = "mdify.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
