[project]
name = "mdify-cli"
version = "1.2.0"
description = "Lightweight CLI for converting documents to Markdown via Docling container"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tiroq"}
]
keywords = ["markdown", "conversion", "pdf", "docling", "cli", "document", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tiroq/mdify"
Repository = "https://github.com/tiroq/mdify"
Issues = "https://github.com/tiroq/mdify/issues"

[project.scripts]
mdify = "mdify.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mdify", "mdify.*"]
exclude = ["runtime", "runtime.*"]
