[project]
name = "mdify-cli"
version = "2.5.0"
description = "Convert PDFs and document images into structured Markdown for LLM workflows"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "tiroq"}
]
keywords = ["markdown", "conversion", "pdf", "docling", "cli", "document", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/tiroq/mdify"
Repository = "https://github.com/tiroq/mdify"
Issues = "https://github.com/tiroq/mdify/issues"

[project.scripts]
mdify = "mdify.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mdify", "mdify.*"]
exclude = ["runtime", "runtime.*"]

[tool.setuptools.package-data]
mdify = ["../assets/*.png"]
